# planar-cdpr

./: EV3Prototyping.py  Report.tex  references.bib
Latest_System_Code/ev3-client/: sample_client.py
Latest_System_Code/vision-server/: System_constT.py  sample_client.py  vision_server.py
Latest_System_Code/vision-server/Rough/: Actuator.py  CMPUT312.code-workspace  EV3Prototyping.py  Matrix.py  NewtonsMethod.py  System_constV.py  main_inverse_kinematics.py  sample_client.py  trial.py  vision_server copy.py  vision_server.py
Latest_System_Code/vision-server/Rough/Other_Options/: System_constV.py  main_inverse_kinematics_constV.py
ev3-client/: System_constT.py  sample_client.py
planar-pickndrop/: CMakeLists.txt
planar-pickndrop/main/: CMakeLists.txt  main.c  main.cpp  motor.cpp  motor.h
vision_server/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  mouse_pos.py  sample_client.py  vision_server.py
